--- a/lib/platform/web/templates/player/edit.html.eex
+++ b/lib/platform/web/templates/player/edit.html.eex
@@ -1,6 +1,26 @@
 <h2>Edit Player</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: player_path(@conn, :update, @player) %>
+<%= form_for @changeset, player_path(@conn, :update, @player), fn f -> %>
+  <%= if @changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Ooops, something is wrong, check the errors below!</p>
+    </div>
+  <% end %>
 
-<span><%= link "Back", to: player_path(@conn, :index) %></span>
+  <div class="form-group">
+    <%= label f, :display_name, "Player Display Name", class: "control-label" %>
+    <%= text_input f, :display_name, placeholder: "Enter a display name...", class: "form-control" %>
+    <%= error_tag f, :display_name %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :username, "Player User Name", class: "control-label" %>
+    <%= text_input f, :username, placeholder: "Enter a display name...", class: "form-control" %>
+    <%= error_tag f, :username %>
+  </div>
+
+  <div class="form-group">
+    <%= submit "Submit", class: "btn btn-primary" %>
+    <span><%= link "Back", to: player_path(@conn, :index), class: "btn-default"%></span>
+  </div>
+<% end %>
