--- a/lib/platform/web/templates/player/new.html.eex
+++ b/lib/platform/web/templates/player/new.html.eex
@@ -1,6 +1,28 @@
-<h2>New Player</h2>
+<h2 Player Sign Up Page</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: player_path(@conn, :create) %>
 
-<span><%= link "Back", to: player_path(@conn, :index) %></span>
+<%= form_for @changeset, player_path(@conn, :create), fn f -> %>
+  <%= if @changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Ooops, something is wrong, please check errors below.</p>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= label f, :username, "Player Username", class: "control-label"%>
+    <%= text_input f, :username, placeholder: "Enter username...", class: "form-control" %>
+    <%= error_tag f, :username %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :password, "Player Password", class: "control-label" %>
+    <%= password_input f, :password, placeholder: "Enter a password...", class: "form-control" %>
+    <%= error_tag f, :password %>
+  </div>
+
+  <div class="form-group">
+    <%= submit "Submit", class: "btn btn-primary" %>
+    <span><%= link "Back", to: player_path(@conn, :index), class: "btn btn-default" %></span>
+  </div>
+<% end %>
+
