--- a/lib/platform/web/templates/player/show.html.eex
+++ b/lib/platform/web/templates/player/show.html.eex
@@ -1,16 +1,12 @@
 <h2>Show Player</h2>
 
 <ul>
+  <li> <strong>ID:</strong> <%= @player.id %> </li>
 
-  <li>
-    <strong>Username:</strong>
-    <%= @player.username %>
-  </li>
+  <li> <strong>Display name:</strong> <%= @player.display_name %> </li>
+  <li> <strong>Username:</strong> <%= @player.username %> </li>
 
-  <li>
-    <strong>Score:</strong>
-    <%= @player.score %>
-  </li>
+  <li> <strong>Score:</strong> <%= @player.score %> </li>
 
 </ul>
 
