--- a/lib/platform/web/templates/page/index.html.eex
+++ b/lib/platform/web/templates/page/index.html.eex
@@ -1,4 +1,2 @@
-<%= link("Create New Player", to: player_path(@conn, :new), class: "btn btn-success") %>
-<br\>
-<%= link("List all players", to: player_path(@conn, :index), class: "btn btn-info") %>
+<div class="elm-container"></div>
 
