--- a/lib/platform/web/templates/player/edit.html.eex
+++ b/lib/platform/web/templates/player/edit.html.eex
@@ -20,6 +20,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :password, "Password", class: "control-label" %>
+    <%= password_input f, :password, placeholder: "enter a password", class: "form-control" %>
+    <%= error_tag f, :password %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
     <span><%= link "Back", to: player_path(@conn, :index), class: "btn-default"%></span>
   </div>
